# vhffs-4.5

./: .gitignore  COPYING  ChangeLog  INSTALL  README  bootstrap.sh  configure.ac  vhffs-test-dependencies.in
branches/vhffs-4.5/: AUTHORS  Makefile.am  NEWS  Releases.notes
branches/vhffs-4.5/debian/: vhffs-api.dirs  vhffs-fs.dirs  vhffs-fssync.files  vhffs-fssync.vhffs-fssync.default  vhffs-fssync.vhffs-fssync.init  vhffs-jabber.files  vhffs-listengine.files  vhffs-panel-members.files  vhffs-robots.files  vhffs-robots.logrotate
branches/vhffs-4.5/m4/: ChangeLog
branches/vhffs-4.5/vhffs-api/examples/: Makefile.am  create_cvs_panel.pl  create_dns.pl  create_forward.pl  create_group.pl  create_group_by_panel.pl  create_list.pl  create_mail.pl  create_postgres.pl  create_user.pl  delbox.pl  get_list.pl  mailuser.pl  mailuser_add_box.pl  modify_user.pl  perm_for_user.pl  show_dumper_cvs.pl  show_dumper_user.pl  show_mail_conf.pl  show_mail_per_group.pl  show_members_from_list.pl
branches/vhffs-4.5/vhffs-autokill/: Makefile.am  autokill.c
branches/vhffs-4.5/vhffs-backend/: AUTHORS  LICENSE  Makefile.am
branches/vhffs-4.5/vhffs-backend/conf/: vhffs.conf.dist.in
branches/vhffs-4.5/vhffs-backend/src/: Makefile.am
branches/vhffs-4.5/vhffs-compat/: from-4.1-to-4.2.sql  from-4.3-to-4.4.sql  from-4.4-to-4.5.sql  updatedb.pl
branches/vhffs-4.5/vhffs-contrib/autoreply/: 349_vhffs-autoreply-router  40_vhffs-autoreply-transport  patch
branches/vhffs-4.5/vhffs-cron/: Makefile.am
branches/vhffs-4.5/vhffs-forum/: Makefile.am  README  punbb-1.3.5_vhffs.patch
branches/vhffs-4.5/vhffs-fs/: AUTHORS  Makefile.am  README  bootstrap.sh  configure.ac  vhffsfs.c
branches/vhffs-4.5/vhffs-fssync/: README  vhffsfssync_master.c
branches/vhffs-4.5/vhffs-intl/: Makefile.in.in  README  es_ES.po  extra_strings.pl  fr_FR.po  vhffs.pot
branches/vhffs-4.5/vhffs-irc/: README  modobot.pl
branches/vhffs-4.5/vhffs-jabber/: Makefile.am  README  vhffspipe.pl
branches/vhffs-4.5/vhffs-listengine/: Makefile.am
branches/vhffs-4.5/vhffs-listengine/src/: Makefile.am  listengine.pl
branches/vhffs-4.5/vhffs-mw/: Makefile.am  VHFFSAuthPlugin.php
branches/vhffs-4.5/vhffs-panel/: index.pl
branches/vhffs-4.5/vhffs-panel/js/: LICENSE  public.js
branches/vhffs-4.5/vhffs-patches/lighttpd/: 10-partialcontentabuse.conf  README
branches/vhffs-4.5/vhffs-patches/mysql/: 200_mysql-5.5-5.5.40-username-length.dpatch  201_mysql-5.5-5.5.40-disable-tests.dpatch
branches/vhffs-4.5/vhffs-patches/phppgadmin/: phppgadmin_4.2.3_tuxfamily.patch  phppgadmin_5.0.2_tuxfamily.patch
branches/vhffs-4.5/vhffs-patches/pureftpd/: pure-ftpd-1.0.36-altlog-syslog.patch  pure-ftpd-1.0.36-customerproof-tf.patch
branches/vhffs-4.5/vhffs-patches/suphp/: 10_TuxFamily-suphp-0.7.1-3-directorygroupcheck.dpatch  (+1 more)
branches/vhffs-4.5/vhffs-robots/: Makefile.am
branches/vhffs-4.5/vhffs-shells/: Makefile.am  tuxshell.c
branches/vhffs-4.5/vhffs-stsmon/: Makefile.am
branches/vhffs-4.5/vhffs-syslogger/: Makefile.am  syslogger.c
branches/vhffs-4.5/vhffs-themes/: Makefile.am
vhffs-api/src/: Makefile.am  Vhffs.pm
vhffs-api/src/Vhffs/: Acl.pm  Broadcast.pm  Conf.pm  Constants.pm  Functions.pm  Group.pm  Object.pm  ObjectFactory.pm  Robots.pm  Stats.pm  User.pm  UserGroup.pm
vhffs-compat/: Makefile.am  from-4.2-to-4.3.sql
vhffs-cron/src/: Makefile.am  vhffscron.pl
vhffs-doc/: Makefile.am
vhffs-doc/config/apache/: panelconf
vhffs-doc/config/courier/: pop3d-ssl
vhffs-doc/config/exim4-mx1/: 00_vhffs-main  350_vhffs-virtual_boxes-router  351_vhffs-forwards-router  40_vhffs-vhffs_local-transport
vhffs-doc/config/exim4-mx2/: exim4.conf
vhffs-doc/src/: dbdiag.dia
vhffs-fssync/: Makefile.am  vhffsfssync_slave.c
vhffs-irc/: Makefile.am
vhffs-panel/: Makefile.am
vhffs-panel/js/: commons.js
vhffs-panel/js/dijit/: dijit-all.js.uncompressed.js
vhffs-panel/js/vhffs/: Menu.js
vhffs-panel/templates/: Makefile.am
vhffs-panel/templates/acl/: form.tt  view.tt
vhffs-panel/templates/anonymous/: account_created.tt  lost-password-ack.tt
vhffs-panel/templates/dns/: prefs.tt
vhffs-panel/templates/group/: index.tt  info.tt  prefs.tt  tags.tt
vhffs-panel/templates/layouts/: panel.tt
vhffs-panel/templates/mail/: prefs.tt
vhffs-panel/templates/mailinglist/: prefs.tt
vhffs-panel/templates/menu/: admin.tt  context.tt  moderator.tt
vhffs-panel/templates/mercurial/: create.tt
vhffs-panel/templates/misc/: alert.tt  header.tt  languages.tt  service-index.tt
vhffs-panel/templates/mysql/: create.tt
vhffs-panel/templates/object/: resubmit.tt
vhffs-panel/templates/user/: prefs.tt
vhffs-panel/templates/web/: create.tt  prefs.tt
vhffs-patches/: Makefile.am
vhffs-patches/lighttpd/: lighttpd-1.4.28-mod_partialcontentabuse-debian-sid.patch  lighttpd-1.4.28-mod_partialcontentabuse.patch  mod_partialcontentabuse.c
vhffs-patches/mod-vhost-hash-alias/: mod-vhost-hash-alias-context-document-root.patch
vhffs-patches/mysql/: 200_mysql-5.1-5.1.73-username-length.dpatch
vhffs-patches/pureftpd/: pure-ftpd-1.0.36-estpandpassive.patch
vhffs-patches/suphp/: 12_TuxFamily-suphp-0.7.1-3-add-targetmode-execute.dpatch  13_TuxFamily-suphp-0.7.1-3-free-bucket-in-discard-output.dpatch
vhffs-patches/tfsyscall/: tfsyscall-0.1.1-2.6.23.16.patch  tfsyscall-0.1.1-2.6.25.11.patch  tfsyscall-0.1.1-2.6.28.9.patch  tfsyscall-0.2.0-2.6.28.9.patch  tfsyscall-0.2.0-2.6.29.5.patch  tfsyscall-0.2.1-2.6.33.2.patch  tfsyscall-0.2.2-2.6.32.41.patch  tfsyscall-0.2.2-2.6.33.2.patch  tfsyscall-0.2.2-2.6.36.1.patch  tfsyscall-0.2.2-2.6.39.patch  tfsyscall-0.2.2-3.2.14.patch
vhffs-public/: Makefile.am  index.pl
vhffs-public/templates/content/: all-groups.tt  group-details.tt  last-users.tt  user-details.tt  usersearch-results.tt
vhffs-public/templates/misc/: closed.tt
vhffs-public/templates/parts/: footer.tt  group-general.tt  header.tt  left-menu.tt  top-menu.tt
vhffs-tools/src/: Makefile.am  vhffs-dumpmysql  vhffs-groupadd  vhffs-managemail  vhffs-moderate  vhffs-passwd  vhffs-quota  vhffs-useradd  vhffs-userinfo  vhffs-webdir
(+288 files in other folders)
