EXTRA_DIST=src

docdir = @DOCDIR@

nobase_dist_doc_DATA = \
	config/apache/panelconf \
	config/apache/publicconf \
	config/bind/README \
	config/bind/named.conf.vhffs \
	config/courier/authdaemonrc \
	config/courier/authpgsqlrc \
	config/courier/imapd \
	config/courier/imapd-ssl \
	config/courier/pop3d \
	config/courier/pop3d-ssl \
	config/exim4-mx1/00_vhffs-main \
	config/exim4-mx1/350_vhffs-virtual_boxes-router \
	config/exim4-mx1/351_vhffs-forwards-router \
	config/exim4-mx1/352_vhffs-lists-router \
	config/exim4-mx1/40_vhffs-lists-transport \
	config/exim4-mx1/40_vhffs-vhffs_local-transport \
	config/exim4-mx1/exim4.conf \
	config/exim4-mx2/00_vhffs \
	config/exim4-mx2/exim4.conf \
	config/exim4-mx2/splitted-conf.patch
